--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,29 @@
-.padding{
-    background-color: antiquewhite;
-    margin: 50px;
-    padding: 10px;
-    text-align: justify;
+.image {
+    display: block;
     width: 300px;
-
-    border: 2px solid red;
-    border-radius: 20px;
-
+    margin-top: 100px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.para{
-    width: 300px;
+.search-input {
+    display: block;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    
+    height: 24px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border: 30px #dfe1e5;
+    border-radius: 24px;
+    
 }
 
 button{
-    color: black;
-    border: 1px solid black;
-    border-radius: 30px;
-    background-color: aliceblue;
-    padding: 10px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: block;
+    width: 100px;
+    margin-left: auto;
+    margin-right: auto;
 }
