--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,20 @@
-.image {
-    display: block;
-    width: 300px;
-    margin-top: 100px;
-    margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.search-input {
-    display: block;
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    
-    line-height: 24px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border: 30px #dfe1e5;
-    border-radius: 24px;
-    
-}
-
-.flexbox{
+.card{
     display: flex;
-    justify-content: center;
+    border: 1px dotted blue;
+    border-radius: 2px;
+    background-color: azure;
+    padding: 10px;
+    text-align: center;
 }
 
-button{
-    margin-left: 10px;
+.image{
+    width: 180px;
+    height: 180px;
+    margin-right: 30px;
+}
+
+.border{
+    border: 1px dotted blue;
+    border-radius: 2px;    
+    padding: 5px;
 }
