--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,11 @@
-.card{
-    display: flex;
-    border: 1px dotted blue;
-    border-radius: 2px;
-    background-color: azure;
-    padding: 10px;
+body{
+    color: rgb(20, 13, 4);
+    background-image: url("image/image2.jpg");
+    background-size: cover;
     text-align: center;
+    
 }
 
-.image{
-    width: 180px;
-    height: 180px;
-    margin-right: 30px;
-}
-
-.border{
-    border: 1px dotted blue;
-    border-radius: 2px;    
-    padding: 5px;
+.btn{
+    margin-top: 30px;
 }
