--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,35 @@
-body{
-    /* background-color: red; */
-    color: azure;
-    text-shadow: 0px 0px 10px black;
+.hero{
+    display: flex;
     text-align: center;
+    font-family: "Happy Monkey", sans-serif;
+    padding-top: 10px;
+    flex-direction: column;
+    align-items: center;
+
 }
 
-h1{
-    margin-top: 250px;
-    font-size: 10cap;
+.image{
+    width: 300px;
+    border-radius: 50%;
+    border: 3px solid darkblue;
+
+}
+
+
+body{
+    background-color: rgb(54, 47, 60);
+    color: aliceblue;
+
+
+}
+
+h1,h2{
+
+    text-shadow: 3px 4px 6px wheat;
+    
+}
+
+h2{
+    background: cadetblue;
+    padding: 4px;
 }
