--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,26 @@ h2{
     background: cadetblue;
     padding: 4px;
 }
+
+
+.gift{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.image{
+    border: 3px solid red;
+}
+
+.gift-img {
+    margin: 0 auto;
+    width: 400px;
+    height: 400px;
+    border: 6px solid white;
+    border-radius: 10px;
+    background-image: url("image/gift.gif");
+    background-size: cover;
+}
